# TAAC_2026

./: .gitignore  Dockerfile  EXPERIMENTS.md  README.md  TESTING.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run.sh  zensical.toml
.agents/skills/pcvr-experiment-integration/: SKILL.md
.agents/skills/taac-competition-environment/: SKILL.md
.agents/skills/taac-docs-pages-pipeline/: SKILL.md
.agents/skills/vscode-devcontainer-cleanup/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml
config/online_dataset_eda/: runner.py
config/symbiosis/: __init__.py  model.py
configs/: creatorwyx_din_adapter.yaml  creatorwyx_grouped_din_adapter.yaml  decomposed_baseline.yaml  decomposed_dual_path.yaml  ucasim_v1.yaml
docker/: entrypoint.sh
docs/: architecture.md  dev.md  getting-started.md  index.md
docs/analysis/: feature-schema.md
docs/experiments/: baseline.md  ctr-baseline.md  deepcontextnet.md  grok.md  host-device-info.md  hyformer.md  index.md  interformer.md  onetrans.md  online-dataset-eda.md  oo.md  unirec.md  uniscaleformer.md
docs/guide/: cache-cleanup.md  competition-online-server.md  contributing.md  local-site.md  online-training-bundle.md  search.md  testing.md  triton-kernels.md
docs/papers/: deepseek-v4.md
scripts/: benchmark_transformer_backends.py
src/taac2026/application/evaluation/: cli.py
src/taac2026/application/maintenance/: package_inference.py  package_training.py
src/taac2026/application/maintenance/templates/: bundle_readme.md.tmpl  run.sh.tmpl
src/taac2026/application/reporting/: cli.py
src/taac2026/application/training/: cli.py
src/taac2026/infrastructure/: checkpoints.py
src/taac2026/infrastructure/experiments/: discovery.py
src/taac2026/infrastructure/io/: default_data_pipeline.py
src/taac2026/infrastructure/nn/: gpu_capability.py  te_backend.py
src/taac2026/infrastructure/pcvr/: data.py  experiment.py  modeling.py  trainer.py
src/taac2026/infrastructure/training/: runtime.py
taac2026/: __init__.py  config.py  data.py  train.py
taac2026/feature_engineering/: __init__.py  cli.py  schema.py
taac2026/models/: __init__.py  baseline.py  common.py  decomposed.py  din.py  ucasim.py
tests/: conftest.py
tests/benchmarks/cpu/: conftest.py
tests/integration/: test_data_pipeline.py
tests/unit/: _pcvr_experiment_matrix.py  test_checkpoint_and_loader.py  test_dependency_profiles.py  test_experiment_discovery.py  test_experiment_packages.py  test_model_performance_reporting.py  test_package_inference.py  test_package_training.py  test_pcvr_data_augmentation.py  test_pcvr_data_split.py  test_pcvr_infer_runtime.py  test_pcvr_trainer.py  test_runtime_contract_matrix.py  test_training_cli.py  test_transformer_blocks.py
tools/: log_host_device_info.sh  strip_docs_content.sh
