[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "taac2026"
version = "0.1.0"
description = "TAAC 2026 experiment workspace"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
	"datasets>=3.0",
	"hypothesis>=6.142",
	"loguru>=0.7",
	"matplotlib>=3.10",
	"numpy>=2.1",
	"optuna>=4.4",
	"pyarrow>=18.0",
	"pytest>=8.3",
	"pytest-benchmark>=5.1",
	"rich>=13.9",
	"tomli>=2.0",
	"triton>=3.2; platform_system == 'Linux'",
]

[project.optional-dependencies]
cpu = [
	"torch>=2.6; platform_system == 'Linux'",
	"torchao>=0.17; platform_system == 'Linux'",
]
cuda126 = [
	"torch>=2.6; platform_system == 'Linux'",
	"torchao>=0.17; platform_system == 'Linux'",
	"fbgemm-gpu>=1.2; platform_system == 'Linux'",
	"torchrec>=1.0; platform_system == 'Linux'",
]
te = [
	"transformer-engine[pytorch]>=2.13; platform_system == 'Linux'",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cpu", marker = "platform_system == 'Linux'", extra = "cpu" },
	{ index = "pytorch-cu126", marker = "platform_system == 'Linux'", extra = "cuda126" },
]
torchao = [
	{ index = "pytorch-cpu", marker = "platform_system == 'Linux'", extra = "cpu" },
	{ index = "pytorch-cu126", marker = "platform_system == 'Linux'", extra = "cuda126" },
]
"fbgemm-gpu" = [
	{ index = "pytorch-cu126", marker = "platform_system == 'Linux'", extra = "cuda126" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [
	[
		{ extra = "cpu" },
		{ extra = "cuda126" },
	],
]

[project.scripts]
taac-train = "taac2026.application.training.cli:main"
taac-evaluate = "taac2026.application.evaluation.cli:main"
taac-search = "taac2026.application.search.cli:main"
taac-package-train = "taac2026.application.maintenance.package_training:main"
taac-clean-pycache = "taac2026.application.maintenance.clean_pycache:main"
taac-clean-github-logs = "taac2026.application.maintenance.github_cleanup:main"
taac-plot-model-performance = "taac2026.application.reporting.cli:main"
taac-dataset-eda = "taac2026.application.reporting.eda_cli:main"
taac-tech-timeline = "taac2026.application.reporting.timeline_cli:main"
taac-bench-report = "taac2026.application.reporting.bench_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"taac2026.application.maintenance.templates" = ["*.tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "-ra --strict-markers"
markers = [
	"unit: fast unit tests for pure logic and local contracts",
	"integration: higher-level workflow tests across module boundaries",
	"gpu: tests that require a CUDA GPU (skipped automatically when unavailable)",
	"benchmark_cpu: CPU-safe benchmark tests that run in automatic CI",
	"benchmark_gpu: GPU benchmark tests that run only via local CLI entry points",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["B", "UP", "PTH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/gpu_env_support.py" = ["E402"]

[tool.coverage.run]
branch = true
source = [
	"src/taac2026/domain",
	"src/taac2026/application/search",
	"src/taac2026/application/training",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
